new links update

--- a/sections/talks/landing.pug
+++ b/sections/talks/landing.pug
@@ -26,8 +26,26 @@ html
     include ../navbar
 
     div.mainstyle
-      h3 Experiments done
+      h3 Experiments and Publications 
       ul.fb--icon-list
+        li For the Italian elections 2018 has been made a certain campaign, the main website is 
+          a(href="https://elezioni.tracking.exposed") https://elezioni.tracking.exposed
+          |  and publications explainig it are: 
+          a(href="https://medium.com/@trackingexposed/facebook-tracking-exposed-background-80e0f72e615f") fbtrex - Background
+          |, 
+          a(href="https://medium.com/@trackingexposed/testing-facebook-algorithm-in-an-electoral-campaign-methodology-e7f886776890") testing Facebook algorithm in an electoral campagin (methodology)
+          |, 
+          a(href="https://medium.com/@trackingexposed/first-sighting-of-facebook-algorithmic-influence-9e6a0a70781b") first sighting of Facebook algorithm influence
+          |, 
+          a(href="https://medium.com/@trackingexposed/judging-algorithm-discrimination-faee15989be") judging algorithm discrimination
+          |, 
+          a(href="https://medium.com/@trackingexposed/facebook-stab-online-media-twice-3bd751dbd819") Facebook stab online media twice
+          |.
+
+        li 
+          a(href="https://www.opendemocracy.net/digitaliberties/claudio-agosti/could-populism-be-side-effect-of-personalized-algorithm") Article on openDemocracy.net
+          |, explaining the idea of Information Diet visualization.
+
         li
           a(href="https://medium.com/@trackingexposed/facebook-algorithm-and-impact-on-media-french-election-experiment-1-d760ed5a242f" target="_blank") French election experiment
           |  Our preliminary publication on how the same media got differentiated coverage
