--- a/sections/team.pug
+++ b/sections/team.pug
@@ -39,7 +39,7 @@ html
                 thead
                     tr
                         th Who
-                        th What
+                        th Thanks for
                 tbody
                     tr
                         td 
@@ -74,14 +74,11 @@ html
                             a(href="https://twitter.com/lucacorsato" target="blank") Luca Corsato
                             |)
                     tr
-                        td Louis Holbrook
-                        td Parser developer
+                        td Barbara Gianessi
+                        td Communication & outreach
                     tr
-                        td Faffa Idoteo
-                        td what I can write here? ♥
-                    tr
-                        td Pierpaolo Pantone
-                        td Parser developer
+                        td Federico Sarchi
+                        td Analysis and reporting
                     tr
                         td Giovanni Civardi (
                             a(href="https://twitter.com/@ciaby" target="_blank") ciaby
@@ -92,7 +89,7 @@ html
                 .inclusive
                     h3 The team needs to grow diverse and multicultural; The whole goal of facebook.tracking.exposed can be reached only 
                     b through a global and inclusive community able to critic the algorithms from multiple points of views. 
-                    |  The current team suffer this limit because has collect interest, so far only after italian and german
+                    |  The current team suffer this limit because has collect interest, so far, only on italian and german
                     i  
                         a(href="/initiatives") hacker events
                     |. This has been driven by opportunities and is not a self-segregating decision.
