current takedown notice

--- a/sections/useit.pug
+++ b/sections/useit.pug
@@ -2,16 +2,17 @@ block useit
   h2 Use It!
 
   p Install the 
-    a(target="_blank" href="https://chrome.google.com/webstore/detail/facebooktrackingexposed/fnknflppefckhjhecbfigfhlcbmcnmmi") chrome
-    |, or the 
     a(target="_blank" href="https://addons.mozilla.org/en-US/firefox/addon/facebook-tracking-exposed/") Firefox extension
+    |, because 
+    b the Chrome version is currently
+        a(target="_blank" href="https://www.openrightsgroup.org/blog/2018/facebook-don%E2%80%99t-want-you-to-know-how-their-algorithm-works") TakeDown
+    |. We are dealing with this issue. at the moment the scarcity of resources from our side keep the situation that way. 
+    b At least, you can 
+    a(target="_blank" href="https://medium.com/@trackingexposed") enjoy our publications
     |.
   p
     a(target="_blank" href="https://addons.mozilla.org/en-US/firefox/addon/facebook-tracking-exposed/")    
         img(src="./images/firefoxextension.png")
-  p
-    a(target="_blank" href="https://chrome.google.com/webstore/detail/facebooktrackingexposed/fnknflppefckhjhecbfigfhlcbmcnmmi")    
-        img(src="./images/chromeextension.png")
   p The collected data represent a publicly accessible knowledge you can download every week. We offer some basic visualisation intended to give awareness and critical judgement to the supporters:
     ul.fb--icon-list
       li Insight on your own timeline (so far, you can download your metadata)
