--- a/sections/useit.pug
+++ b/sections/useit.pug
@@ -4,9 +4,9 @@ block useit
   p Install the 
     a(target="_blank" href="https://addons.mozilla.org/en-US/firefox/addon/facebook-tracking-exposed/") Firefox extension
     |, because 
-    b the Chrome version is currently
+    b the Chrome version is currently in 
         a(target="_blank" href="https://www.openrightsgroup.org/blog/2018/facebook-don%E2%80%99t-want-you-to-know-how-their-algorithm-works") TakeDown
-    |. We are dealing with this issue. at the moment the scarcity of resources from our side keep the situation that way. 
+    |. We are dealing with this issue. At the moment the scarcity of resources from our side keeps the situation that way. 
     b At least, you can 
     a(target="_blank" href="https://medium.com/@trackingexposed") enjoy our publications
     |.
