clean, less is more

--- a/sections/useit.pug
+++ b/sections/useit.pug
@@ -14,16 +14,18 @@ block useit
     a(target="_blank" href="https://addons.mozilla.org/en-US/firefox/addon/facebook-tracking-exposed/")    
         img(src="./images/firefoxextension.png")
 
-  p The project currently does not offer any service for an end-user; It has enabled so far academic research and analysis on the impact of algorithms. 
+  h3 This project enabled academic research and analysis on the impact of algorithms. 
+  p 
     ul.fb--icon-list
       li Read the report published with the 
         a(href="https://webfoundation.org/research/the-invisible-curation-of-content-facebooks-news-feed-and-our-information-diets/") WebFoundation.
       li For research and data analyst interested in the algorithm influence, 
-        a(href="https://github.com/tracking-exposed/experiments-data/tree/master/e18") we released the full dataset obtain during the Italian 2018 electoral campaign experiment (italian
+        a(href="https://github.com/tracking-exposed/experiments-data/tree/master/e18") we released the full dataset obtain during the Italian 2018 electoral campaign experiment
+        |. In italian language, the 
         a(href="https://github.com/tracking-exposed/presentation/blob/master/Progetto%20fbtrex%20-%20Revisione%208%20-%20Aprile%202018.pdf") paper
-        |, 
+        |, and the 
         a(href="https://github.com/tracking-exposed/presentation/blob/master/elezioni.tracking.exposed%20slide%20finali.pdf") slides
-        | ).
+        |.
       li This is our last small blog: 
         b
           a(href="https://medium.com/@trackingexposed/preventing-the-next-cambridge-analytica-s-78345f9834ff") Preventing the next Cambridge Analytica(s)
