small link update about https://github.com/tracking-exposed/web-extension/issues/72

--- a/sections/useit.pug
+++ b/sections/useit.pug
@@ -6,7 +6,9 @@ block useit
     |, because 
     b the Chrome version is currently in 
         a(target="_blank" href="https://www.openrightsgroup.org/blog/2018/facebook-don%E2%80%99t-want-you-to-know-how-their-algorithm-works") TakeDown
-    |. We are dealing with this issue. At the moment the scarcity of resources from our side keeps the situation that way. 
+    |. We are dealing with this 
+    a(target="_blank" href="https://github.com/tracking-exposed/web-extension/issues/72") issue
+    |. At the moment the scarcity of resources from our side keeps the situation that way. 
     b At least, you can 
     a(target="_blank" href="https://medium.com/@trackingexposed") enjoy our publications
     |.
