updated team with partners, supporters, more clear contacts

--- a/sections/team.pug
+++ b/sections/team.pug
@@ -17,9 +17,9 @@ html
         meta(property="og:image" content="https://facebook.tracking.exposed/images/fbtrex_logo-400x400.png")
         meta(property="og:image:width" content="400")
         meta(property="og:image:height" content="400")
-        meta(property="og:description" content="The team needs to grow diverse and multicultural; The whole goal of facebook.tracking.exposed can be reached only through a global and inclusive community able to critic the algorithms from multiple points of views")
+        meta(property="og:description" content="The team intend to grow diverse and multicultural; If algorithms should reflect our priorities, every culture need at least someone looking forward to codify their values")
 
-        title Contact, About Us
+        title About facebook.tracking.exposed project
 
     body
 
@@ -27,72 +27,74 @@ html
         include navbar 
 
         div.mainstyle
-            p The team below is volunteer based. If you have questions, please mail 
-                b support﹫tracking・exposed; 
-                | We have a Facebook page, to organize experiments on the social media sphere, please join us on 
-                a(href="https://www.facebook.com/personalizationalgorithm") Personalisation Algorithms
+            p The team below is volunteer based. The project is managed as a GPL free software community, part of a larger plan: 
+                a(href="https://tracking.exposed") tracking-exposed
                 |.
-            
+
         div.mainstyle
-            h2 Contributor Team
+            h2 Contacts:
+            div.container
+                div.topheader
+                    div.col-xs-4.col-sm-4.col-md-4.col-lg-4
+                        p The issue trackers: 
+                            div < 
+                                img.githublogo(src="/images/github-256.png")
+                                a(href="https://github.com/tracking-exposed/web-extension/issues") browser extension
+                                |, 
+                                a(href="https://github.com/tracking-exposed/facebook/issues") backend
+                                |  /> 
+                    div.col-xs-4.col-sm-4.col-md-4.col-lg-4
+                        p An email
+                        small change the [﹫・], they are not what they looks
+                        p
+                            b support﹫tracking・exposed
+                    div.col-xs-4.col-sm-4.col-md-4.col-lg-4
+                        p Our, sub-optimally used so far, Facebook page: 
+                            a(href="https://www.facebook.com/personalizationalgorithm") Personalisation Algorithms
+
+        div.mainstyle
+            h2 Supporters who deserve mention in 2018:
+            div.container
+                div.topheader
+                    div.col-xs-4.col-sm-4.col-md-4.col-lg-4
+                        p DigitalFund
+                        small successfully got our first small grant.
+                    div.col-xs-4.col-sm-4.col-md-4.col-lg-4
+                        p Dandelion, Spaziodati
+                        small getting anonymized data and doing semanting analysis
+
+
+        div.mainstyle
+            h2 Maintainer, past and current contributors
             table.table.table-striped
-                thead
-                    tr
-                        th Who
-                        th Thanks for
                 tbody
+                    tr
+                        td
+                            a(href="https://twitter.com/_vecna" target="blank") Claudio Agosti
                     tr
                         td 
                             a(href="https://twitter.com/vrde" target="blank") Alberto Granzotto
-                        td
-                            a(href="https://github.com/vrde" target="blank") Programmer
-                    tr
                         td 
-                            a(href="https://github.com/digitigrafo" target="blank") Cristina Carnevali (Kiki)
-                        td
-                            a(href="http://digitigrafo.it/" target="blank") Frontend developer
-                    tr
-                        td 
-                            a(href="https://twitter.com/_vecna" target="blank") Claudio Agosti
-                        td
-                            a(href="https://github.com/vecna" target="blank") Programmer, Director
+                            a(href="https://github.com/digitigrafo" target="blank") Cristina Carnevali
+                        td Federico Sarchi
                     tr
                         td 
                             a(href="https://twitter.com/Gilberto_Conti" target="blank") Gilberto Conti
                         td
                             a(href="https://github.com/gibix" target="blank") Programmer
+                        td Barbara Gianessi
                     tr
+                        td 
+                            a(href="https://twitter.com/raimondian" target="blank") Andrea Raimondi
                         td 
                             a(href="https://twitter.com/gmcmullen" target="blank") Greg McMullen
-                        td Policy
-                    tr
                         td 
                             a(href="https://twitter.com/osd_it" target="blank") OpenSensorsData
-                        td Advisor (
-                            a(href="https://twitter.com/raimondian" target="blank") Andrea Raimondi
-                            |, 
-                            a(href="https://twitter.com/lucacorsato" target="blank") Luca Corsato
-                            |)
-                    tr
-                        td Barbara Gianessi
-                        td Communication & outreach
-                    tr
-                        td Federico Sarchi
-                        td Analysis and reporting
                     tr
                         td Giovanni Civardi (
                             a(href="https://twitter.com/@ciaby" target="_blank") ciaby
                             |)
-                        td lazy sysadmin
-
-            div.mainstyle
-                .inclusive
-                    h3 The team needs to grow diverse and multicultural; The whole goal of facebook.tracking.exposed can be reached only 
-                    b through a global and inclusive community able to critic the algorithms from multiple points of views. 
-                    |  The current team suffer this limit because has collect interest, so far, only on italian and german
-                    i  
-                        a(href="/initiatives") hacker events
-                    |. This has been driven by opportunities and is not a self-segregating decision.
-
+                        td Costantino Carugno
+                        td Raffaele Angus
 
         div.footer 
