improved a bit again team.pug

--- a/sections/team.pug
+++ b/sections/team.pug
@@ -44,7 +44,9 @@ html
                                 a(href="https://github.com/tracking-exposed/facebook/issues") backend
                                 |  /> 
                     div.col-xs-4.col-sm-4.col-md-4.col-lg-4
-                        p An email
+                        p 
+                            span.glyphicon.glyphicon-envelope
+                            |  a kind e-mail
                         small change the [﹫・], they are not what they looks
                         p
                             b support﹫tracking・exposed
@@ -70,26 +72,23 @@ html
                 tbody
                     tr
                         td
-                            a(href="https://twitter.com/_vecna" target="blank") Claudio Agosti
+                            a(href="https://twitter.com/_vecna" target="_blank") Claudio Agosti
                     tr
                         td 
-                            a(href="https://twitter.com/vrde" target="blank") Alberto Granzotto
+                            a(href="https://twitter.com/vrde" target="_blank") Alberto Granzotto
                         td 
-                            a(href="https://github.com/digitigrafo" target="blank") Cristina Carnevali
+                            a(href="https://github.com/digitigrafo" target="_blank") Cristina Carnevali
                         td Federico Sarchi
-                    tr
                         td 
-                            a(href="https://twitter.com/Gilberto_Conti" target="blank") Gilberto Conti
-                        td
-                            a(href="https://github.com/gibix" target="blank") Programmer
+                            a(href="https://twitter.com/Gilberto_Conti" target="_blank") Gilberto Conti
+                    tr
                         td Barbara Gianessi
-                    tr
                         td 
-                            a(href="https://twitter.com/raimondian" target="blank") Andrea Raimondi
+                            a(href="https://twitter.com/raimondian" target="_blank") Andrea Raimondi
                         td 
-                            a(href="https://twitter.com/gmcmullen" target="blank") Greg McMullen
+                            a(href="https://twitter.com/gmcmullen" target="_blank") Greg McMullen
                         td 
-                            a(href="https://twitter.com/osd_it" target="blank") OpenSensorsData
+                            a(href="https://twitter.com/osd_it" target="_blank") OpenSensorsData
                     tr
                         td Giovanni Civardi (
                             a(href="https://twitter.com/@ciaby" target="_blank") ciaby
