work in progrss for new UX

--- a/sections/navbar.pug
+++ b/sections/navbar.pug
@@ -14,12 +14,7 @@ block navbar
             li
               a(href='/') Home
             li
-              a(href='https://chrome.google.com/webstore/detail/facebooktrackingexposed/fnknflppefckhjhecbfigfhlcbmcnmmi', target='_blank') Get it 
-                span.glyphicon.glyphicon-new-window
-                
-                
-            li
-              a(href='/impact/') Impact
+              a(href='/impact/') Stats
             li
               a(href='/privacy-statement') Privacy 
             li
@@ -27,5 +22,5 @@ block navbar
             li
               a(href='/initiatives/') Initiatives
             li
-              a(href='/about') Contact
+              a(href='/about') About
             
