--- a/styles/index.styl
+++ b/styles/index.styl
@@ -164,17 +164,21 @@ p
 
   /*header*/
 
-.githublogo{
-    width:20px;
-    height:auto;
-}
-.fbtrexlogo{
-    border: solid 1px #ccc;
-    border-radius: 10%;
-    padding: 1em;
-    width: 5em;
-    background-color: lightyellow;
-}
+.githublogo
+    width 20px
+    height auto
+
+.fbtrexlogo
+    border solid 1px #ccc
+    border-radius 10%
+    padding 1em
+    width 5em
+    background-color lightyellow
+
+.logocontainer
+    text-align right
+
+
 .topheader {
     margin: 2% 0;
 }
