--- a/sections/project.pug
+++ b/sections/project.pug
@@ -32,11 +32,11 @@ html
         ul.fb--icon-list 
             li The ways in which FB selects information to be presented to individual users are not well understood.
             li Algorithms are like social policies; they should be available for public scrutiny
-            li Users has been used as rats lab in psychological and social experiments.
+            li Users has been used as lab rats in psychological and social experiments.
             li Among all the algorithms crossing our life, Facebook's coordinate how people perceive the reality; besides the enormous audience, it is personalized, making it even harder to scrutiny.
             li How the data are treated, assimilated, analyzed, used and re-purposed is not said by Facebook Data Policy.
             li Facebook claims  
-                a(href="https://psychcentral.com/blog/archives/2017/05/02/even-facebook-doesnt-understand-facebooks-algorithms/") the complexity of the algorithm it is so huge no engineer can understand or explain the internals
+                a(href="https://psychcentral.com/blog/archives/2017/05/02/even-facebook-doesnt-understand-facebooks-algorithms/") the complexity of the algorithm is so huge no engineer can understand or explain the internals
                 |, making the algorithm the perfect technocratic scapegoat
 
         h2 What are the goals
