--- a/sections/realitycheck.pug
+++ b/sections/realitycheck.pug
@@ -27,18 +27,32 @@ html
     
     div.container-fluid.mainstyle
 
-        h2 Hi! is the 2018, this project run over a major update cycle:
-        p.text The interface for the used, temporary-former-codename '
-            i realitycheck
-            |', is discontinued, If you are using chrome, you should know the story of when 
+        h2 Hi! is the 2018, this project run over a major update cycle, but first:
+        p.grateful Thanks for be resiliant and contributing to the project.
+        p.grateful.left-link Despite the apparence, the project is doing OK. 
+            b Besides...
+                i emh...
+            | We didn't yet offer features to you! 
+            | because it turn out, achieve the first results in research has been simple then produce a working experience for you.
+        p.grateful Now the things are going to change, perhaps.
+        p.grateful.left-link In the text below, the story of our last 12 months...
+
+        p.text If you are seeing this page, is because you have not yet an extension update. It 
+            i.orange might because you have chrome
+            |, and we still are fighting to have our browser extension restored because some months ago: 
             a(target="_blank" href="https://www.openrightsgroup.org/blog/2018/facebook-don%E2%80%99t-want-you-to-know-how-their-algorithm-works") Google Chrome TakeDown our browser extension
-            |. Alledegly was a  
+            |. Alledegly this was due a  
             i trademark infringment 
-            | for the presence of 'Facebook' in the name (meh!). Despite the renaming in '
-            b tracking.exposed: investigating algorithm
-            |', they just keep the take down without any further justification. So, you can't get your update, if not uninstalling your extention and reinstall the new one (different link, different extension Id, but basically the same code), plus:
+            | (for the presence of 'Facebook' in the name, meh!). The extension get renamed in '
+            b tracking.exposed: investigating algorithms
+            |', but Google legal team 
+            a(href="https://github.com/tracking-exposed/web-extension/issues/72") keep it down so far
+            |.
+            
+        h4 If you are using Chrome you should use page, can't get your update, you shoulw uninstalling the extention and reinstall the new one (different link, different extension Id, but basically the same code), plus:
         ul.fb--icon-list
             li Spanish language is supported
+            li A clearer opt-in process
             li Work in progress in the new personal interface, you can see the 
                 a(href="/personal/anonymous") anonymous timeline here
                 |.
