--- a/sections/personal/header.pug
+++ b/sections/personal/header.pug
@@ -10,7 +10,7 @@ block header
           a(href="https://github.com/tracking-exposed/facebook") backend
           |  /> 
 
-      div.col-xs-4.col-sm-4.col-md-4.col-lg-4.pull-right.logocontainer
+      div.col-xs-1.col-sm-1.col-md-1.col-lg-1.pull-left.logocontainer
         img.fbtrexlogo(alt="logo of fbtrex" src="/images/fbtrex_logo.svg")
 
       div.col-xs-8.col-sm-8.col-md-8.col-lg-8
