--- a/sections/personal/csv.pug
+++ b/sections/personal/csv.pug
@@ -1,38 +1,64 @@
-h4 Download 
-    b
-        a(class="click" onclick="downloadCSV('feed')") All the feed posts sent by your user, without the HTML, with all the metadata associated
-h4 Download 
-    b
-        a(class="click" onclick="downloadCSV('promoted')") All the promoted posts you saw
+.container-fluid
+    div.container-fluid
+        p.text This page is for 
+            b data analyst
+            |! These are the data you submit in the last 30 days, (
+            span#objectCount
+            |), you can download in .csv format; If you want to download data from more time ago, check the documentation below.
 
-br
-br
-div.documentation
-    h3 CSV documentation
-div.documentation
-    h4 Keys shared among all the CSV:
-    p
-        ul
-            li savingTime: ISO format, is the time when the HTML entities has been saved
-            li id: is an unique identified of the HTML piace analyzed
-            li type: 'promoted' or 'feed', based on what you downloaded
-            li timelineId: is the timeline in which the HTML is appear. when the user refresh, the timeline change
-            li userId: the numeric facebook userId 
-    h3 Keys only in the Feed CSV:
-    p
-        ul
-            li publicationUTime: ISO format, describe when the post has been published
-            li postId: An integer representing the unique facebook Id of the post
-            li permaLink: The URI section which brins you to the post if used in facebook.com
-            li impressionOrder: the numeric order of the post, starting from 1 (in top of the feed)
-            li source: name display as source of the post
-            li text: text of the post
-            li reason: special optional header facebook put on top (it could explain why a post is appearing in your timeline)
-    h3 Keys only in the Promoted CSV:
-    p
-        ul
-            li title: The promoted headline
-            li postLink: Where the links point, if you click on the campaign
-            li linkType: The kind of media embedded
-            li ownerName: Name of the promoted page
+    div.container-fluid
+        h2 Newsfeed content
+        #newsFeedStats
+
+    div.container-fluid
+
+        div.col-sm-6.container-fluid
+            div.documentation
+                h4 in both sponsored and newsfeed, these columns are always present
+                ul.fb--icon-list
+                    li savingTime: ISO format, is the time when the HTML entities has been saved
+                    li id: is an unique identified of the HTML piace analyzed
+                    li type: 'promoted' or 'feed', based on what you downloaded
+                    li timelineId: is the timeline in which the HTML is appear. when the user refresh, the timeline change
+                    li userId: the numeric facebook userId 
+
+        div.col-sm-6.container-fluid
+            p.text
+                a(class="click" onclick="downloadCSV('promoted')") Download the sponsored posts you got, as CSV
+                |.
+            div.documentation
+                h4 Sponsored CSV format, has these four columns
+                ul.fb--icon-list
+                    li title: The promoted headline
+                    li postLink: Where the links point, if you click on the campaign
+                    li linkType: The kind of media embedded
+                    li ownerName: Name of the promoted page
+
+    div.container-fluid
+        h2 Sponsored content
+        #sponsoredStats
+
+        div.col-sm-6.container-fluid
+            p.text
+                a(class="click" onclick="downloadCSV('feed')") Download the newsfeed copy as CSV
+                |.
+            div.documentation
+                h4 CSV format specifics. In the csv you'll find these seven columns
+                ul.fb--icon-list
+                    li publicationUTime: ISO format, describe when the post has been published
+                    li postId: An integer representing the unique facebook Id of the post
+                    li permaLink: The URI section which brins you to the post if used in facebook.com
+                    li impressionOrder: the numeric order of the post, starting from 1 (in top of the feed)
+                    li source: name display as source of the post
+                    li text: text of the post
+                    li reason: special optional header facebook put on top (it could explain why a post is appearing in your timeline)
+
+        div.col-sm-6.container-fluid
+            h2 You want to manage a research group?
+            p.text You might have notice, in the web-extension you can mark your submission as part of a
+                i control group
+                |. That marker permit to a researcher to retrieve all the data of the users with the same marker. Our suggestion is to use this marker as a password not easy to be guessed, which you can share among a group of friends which paricipate to the collection, and then you can download all the data marked with the same control group with this interface:
+            div.api
+                h2 https://facebook.tracking.exposed/blah
+
 
