--- a/styles/personal.styl
+++ b/styles/personal.styl
@@ -51,109 +51,110 @@
     display: block;
     overflow: none;
 
+.documentation
+  text-alig left
+  size 0.9em
+  background linear-gradient(#ffffff, #f4f4ff)
+  h4 
+    font-weight 700
+    padding-left 20px 
 
 /* added in the refactor for the ß */
 @font-face {
-    font-family: 'Work Sans';
-    font-style: normal;
-    font-weight: 400;
-    src: local('Work Sans'), url(/js/local/WorkSans.ttf) format('truetype');
+  font-family: 'Work Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Work Sans'), url(/js/local/WorkSans.ttf) format('truetype');
 }
 
 .realitycontainer {
-    margin-left: 6%;
-    margin-right: 6%;
-    background-color: #F0FFFF;
-    font-family: 'Work Sans', sans-serif;
+  margin-left: 6%;
+  margin-right: 6%;
+  background-color: #F0FFFF;
+  font-family: 'Work Sans', sans-serif;
 }
 
 .headerborders {
-    padding-top: 1em;
-    padding-bottom: 1em;
-    margin-top: -20px;
-}
-
-.documentation {
-    background-color: #FBFBEF;
-    border-top: black 1px solid;
-    border-left: black 1px solid;
+  padding-top: 1em;
+  padding-bottom: 1em;
+  margin-top: -20px;
 }
 
 .click {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .pageSection {
-    font-family: 'Work Sans', sans-serif;
-    background-color: white;
+  font-family: 'Work Sans', sans-serif;
+  background-color: white;
 }
 
 div, h3 {
-    font-family: 'Work Sans', sans-serif;
+  font-family: 'Work Sans', sans-serif;
 }
 
 .c3-texts-uniquePosts {
-    font-size: 0.7em;
-    font-weight: bold;
+  font-size: 0.7em;
+  font-weight: bold;
 }
 
 #dietGraph {
-    width: 80%;
+  width: 80%;
 }
 
 .text {
-    border-left: 2em;
-    border-right: 2em;
-    font-size: 1.2em;
+  border-left: 2em;
+  border-right: 2em;
+  font-size: 1.2em;
 }
 
 .right {
-    text-align: right;
+  text-align: right;
 }
 
 
 .prefix {
-    padding-left: 10px;
-    background-color: #EFFFD1;
-    margin: 5px;
+  padding-left: 10px;
+  background-color: #EFFFD1;
+  margin: 5px;
 }
 
 .feed {
-    background-color: #C7FFCB;
-    margin: 5px;
+  background-color: #C7FFCB;
+  margin: 5px;
 }
 
 .unprocessed {
-    background-color: darkgrey;
-    color: white;
-    margin: 5px;
+  background-color: darkgrey;
+  color: white;
+  margin: 5px;
 }
 
 #shiftContributionBlock {
-    margin: 8px;
-    cursor: 'pointer';
+  margin: 8px;
+  cursor: 'pointer';
 }
 
 .promoted {
-    background-color: #FFEA75;
-    margin: 5px;
+  background-color: #FFEA75;
+  margin: 5px;
 }
 
 .error {
-    background-color: #310038;
-    color: white;
-    margin: 5px;
+  background-color: #310038;
+  color: white;
+  margin: 5px;
 }
 
 .num {
-    width: 30px;
-    border-right: black 1px solid;
-    border-bottom: black 1px solid;
-    background-color: white;
-    text-align: right;
-    padding-right: 5px;
-    margin-right: 5px;
-    display: inline-block;
+  width: 30px;
+  border-right: black 1px solid;
+  border-bottom: black 1px solid;
+  background-color: white;
+  text-align: right;
+  padding-right: 5px;
+  margin-right: 5px;
+  display: inline-block;
 }
 
 #loader {
@@ -168,12 +169,11 @@ div, h3 {
   -moz-animation: spin 1.7s infinite linear;
   -o-animation: spin 1.7s infinite linear;
   -ms-animation: spin 1.7s infinite linear;
-    width:5em;
+   width:5em;
 }
 
-/*reality check*/
 #shiftContributionBlock b {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 @-webkit-keyframes spin {
@@ -191,4 +191,13 @@ div, h3 {
 @-ms-keyframes spin {
   0% { -ms-transform: rotate(0deg);}
   100% { -ms-transform: rotate(360deg);}
+}
+
+/* curtesy message */
+.curtesy {
+  font-size: 4em;
+  text-decoration-line: underline;
+  background-color: palevioletred;
+  color: white;
+  padding: 0.3em;
 }
