testing of the new landing page

--- a/styles/index.styl
+++ b/styles/index.styl
@@ -209,3 +209,18 @@ p
    font-size: 2.8em;
    padding: 0.5em;
 }
+
+.slogan
+  font-size 3em
+
+.left
+  text-align right
+
+.clickable
+    border 1px solid
+    padding 10px
+    box-shadow 0px 5px 5px 1px #fe5000
+    cursor pointer
+
+.space
+   margin-bottom 20px
