fixed legagy realitycheck with better content

--- a/sections/realitycheck.pug
+++ b/sections/realitycheck.pug
@@ -31,34 +31,36 @@ html
         p.grateful Thanks for be resiliant and contributing to the project.
         p.grateful.left-link Despite the apparence, the project is doing OK. 
             b Besides...
-                i emh...
             | We didn't yet offer features to you! 
-            | because it turn out, achieve the first results in research has been simple then produce a working experience for you.
-        p.grateful Now the things are going to change, perhaps.
-        p.grateful.left-link In the text below, the story of our last 12 months...
+            | because it turn out, we achieve 
+            a(href="/initiatives") exciting results in research
+            |, and this was simpler than develop a UX. 
+        p.grateful Now the things are going to change, perhaps. Since version 1.1.15 (released 2018-07-17), the new personal dashboard has begin to be deployed.
+        p.grateful.left-link What happen in the last 12 months of 
+            b FbTREX
+            |?
 
-        p.text If you are seeing this page, is because you have not yet an extension update. It 
-            i.orange might because you have chrome
-            |, and we still are fighting to have our browser extension restored because some months ago: 
-            a(target="_blank" href="https://www.openrightsgroup.org/blog/2018/facebook-don%E2%80%99t-want-you-to-know-how-their-algorithm-works") Google Chrome TakeDown our browser extension
-            |. Alledegly this was due a  
-            i trademark infringment 
-            | (for the presence of 'Facebook' in the name, meh!). The extension get renamed in '
-            b tracking.exposed: investigating algorithms
-            |', but Google legal team 
-            a(href="https://github.com/tracking-exposed/web-extension/issues/72") keep it down so far
-            |.
-            
-        h4 If you are using Chrome you should use page, can't get your update, you shoulw uninstalling the extention and reinstall the new one (different link, different extension Id, but basically the same code), plus:
         ul.fb--icon-list
+            li Google Chrome 
+                a(target="_blank" href="https://www.openrightsgroup.org/blog/2018/facebook-don%E2%80%99t-want-you-to-know-how-their-algorithm-works") Take Down our browser extension
+                |. Alledegly this was due a  
+                i trademark infringment 
+                | (for the presence of 'Facebook' in the name, meh!). The extension get renamed in '
+                b tracking.exposed: investigating algorithms
+                |', but Google legal team 
+                a(href="https://github.com/tracking-exposed/web-extension/issues/72") keep it down so far
+                |.
             li Spanish language is supported
             li A clearer opt-in process
             li Work in progress in the new personal interface, you can see the 
                 a(href="/personal/anonymous") anonymous timeline here
                 |.
-            li We got some nice success in analyzing the Facebook algorithm in Argentina (check it out the 
+            li FbTREX and WebFoundation deliver an innovative black box analysis of Facebook algorithm in Argentina (check it out the 
                 a(href="https://webfoundation.org/research/the-invisible-curation-of-content-facebooks-news-feed-and-our-information-diets/") report written by the WebFoundation
                 |).
+            li FbTREX team made an even more advanced analysis of the Italian national elections, you can find 6 page written by Fabio Chiusi and Claudio Agosti in 
+                a(href="https://ourdataourselves.tacticaltech.org/posts/overview-italy/") this report by TacticalTech
+                |.
             li Inspired by 
                 a(href="https://legacy.gitbook.com/book/hintjens/social-architecture/details") Social Architecture - Building On-line Communities
                 |, I'm trying to replicate the 
@@ -69,17 +71,19 @@ html
                 |. It is a Mix of two data sources: 100% of the post shared by 30 pages and what Facebook decided to show to 6 bots run buy us. The bots were following only the said 30 pages, the only difference among them was few 
                 i like
                 |, and still the quality and diversity of the information shifted seriously.
-            li Firm documentation and specification on our data-reuse logic. Provided actual protection to the data users submit. Their data are accessible only to themselves, only via opt-in and/or personl choice they can share the access to others. 
-
+            li The 
+                b
+                    a(href="https://tracking.exposed") Manifesto of tracking.exposed
+                |  is finally published.
 
         h2 On C4  
         p.text C4 is meant to provide a reusable optimal collaboration model for open source software projects. It has these specific goals:
-        ol
-            li To maximize the scale and diversity of the community around a project, by reducing the friction for new Contributors and creating a scaled participation model with strong positive feedbacks;
-            li To relieve dependencies on key individuals by separating different skill sets so that there is a larger pool of competence in any required domain;
-            li To allow the project to develop faster and more accurately, by increasing the diversity of the decision making process;
-            li To support the natural life cycle of project versions from experimental through to stable, by allowing safe experimentation, rapid failure, and isolation of stable code;
-            li To reduce the internal complexity of project repositories, thus making it easier for Contributors to participate and reducing the scope for error;
-            li To enforce collective ownership of the project, which increases economic incentive to Contributors and reduces the risk of hijack by hostile entities. 
+            ol
+                li To maximize the scale and diversity of the community around a project, by reducing the friction for new Contributors and creating a scaled participation model with strong positive feedbacks;
+                li To relieve dependencies on key individuals by separating different skill sets so that there is a larger pool of competence in any required domain;
+                li To allow the project to develop faster and more accurately, by increasing the diversity of the decision making process;
+                li To support the natural life cycle of project versions from experimental through to stable, by allowing safe experimentation, rapid failure, and isolation of stable code;
+                li To reduce the internal complexity of project repositories, thus making it easier for Contributors to participate and reducing the scope for error;
+                li To enforce collective ownership of the project, which increases economic incentive to Contributors and reduces the risk of hijack by hostile entities. 
 
 
